<resources>
    <string name="app_name">Social App</string>
    <string name="choose_username">Choose Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="slidanetLabel">The Future</string>
    <string name="legacyLabel">Now</string>
    <string name="imageLabel">Image</string>
    <string name="videoLabel">Video</string>
    <string name="textLabel">Text</string>
    <string name="enterText">Enter Text</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="slideButtonText">Slide</string>
    <string name="pixButtonText">Pix</string>
    <string name="peekButtonText">Peek</string>
    <string name="peekDefineButtonText">Define</string>
    <string name="peekSlideButtonText">Move</string>
    <string name="pixDefineButtonText">Define</string>
    <string name="pixSlideButtonText">Move</string>
    <string name="cancelEditingButtonText">Cancel</string>
    <string name="applyEditingButtonText">Apply</string>
    <string name="slideLeftAndRightButtonText">Left And Right</string>
    <string name="slideUpAndDownButtonText">SUp And Down</string>
    <string name="slideAllDirectionsButtonText">All Directions</string>

</resources>