<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/imageLabel" />

        <Button
            android:id="@+id/selectVideoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/videoLabel" />

        <Button
            android:id="@+id/composeTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/textLabel" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>